fix: system dark mode app light mode override

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,9 +23,6 @@
 }
 
 @custom-variant dark (
-  @media (prefers-color-scheme: dark) {
-    html:not([data-dark-mode="light"]) &
-  },
   &:where(.dark, .dark *),
   html[data-dark-mode="dark"] &
 );
